copy paste from tmux to wayland

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,7 +6,10 @@ set -g base-index 1
 set -g renumber-windows on
 
 # set -g terminal-overrides 'xterm*:smcup@:rmcup@'
- set -g mouse off
+set -g mouse on
+# set wl-copy for wayland
+set -s copy-command 'wl-copy'
+
 # sane scrolling:
 # bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e; send-keys -M'"
 # setw -g alternate-screen on
