--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -3,22 +3,26 @@ window:
   opacity: 0.96
 # Font configuration (changes require restart)
 font:
+  family: Hack Nerd Font Mono
   size: 12
   # The normal (roman) font face to use.
   normal:
     # Style can be specified to pick a specific face.
+    family: Hack Nerd Font Mono
     style: Regular
 
   # The bold font face
   bold:
     # Style can be specified to pick a specific face.
+    family: Hack Nerd Font Mono
     style: Bold
 
   # The italic font face
   italic:
     # Style can be specified to pick a specific face.
+    family: Hack Nerd Font Mono
     style: Italic
-    size: 12.0
+    # size: 12.0
 
 # colors:
 #   # Default colors
