--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,6 +3,7 @@
 set -g mode-keys vi
 
 set -g base-index 1
+setw -g pane-base-index 1
 set -g renumber-windows on
 
 # set -g terminal-overrides 'xterm*:smcup@:rmcup@'
@@ -24,6 +25,7 @@ set -s copy-command 'wl-copy'
 
 # set -g @plugin 'tmux-plugins/tmux-yank'
 
+# set escape time to 0, needed for sane vim usage
 set -s escape-time 0
 
 # increase scrollback buffer size
@@ -33,16 +35,16 @@ set -g history-limit 50000
 set -g display-time 4000
 
 # refresh 'status-left' and 'status-right' more often
-set -g status-interval 5
+set -g status-interval 20
 
 # set only on OS X where it's required
 # set -g default-command "reattach-to-user-namespace -l $SHELL"
 
 # upgrade $TERM
 # set -g default-terminal "screen-256color"
-set -g default-terminal "alacritty"
 # set -ga terminal-overrides ',*256col*:Tc'
-set -g terminal-overrides ",alacritty:RGB"
+set -g default-terminal "alacritty"
+set -g terminal-overrides ",alacritty:Tc"
 
 
 # emacs key bindings in tmux command prompt (prefix + :) are better than
@@ -55,18 +57,6 @@ set -g focus-events on
 # super useful when using "grouped sessions" and multi-monitor setup
 setw -g aggressive-resize on
 
-# status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}\"#{=21:pane_title}\" %H:%M %d-%b-%y"
-# set -g  status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}#{=21:pane_title}   #(whoami)@#(cat /etc/hostname)"
-set -g status-right ''
-
-# Set status bar background color to colour232/black
-set -g status-bg colour232
-
-# Set windows backgrounded in the status bar to colour246/gray
-set -g status-fg colour246
-
-# On the left-side of status in green: print '{session_name} {user}@{hostname}'
-set -g status-left '#(#S) #(whoami)@#H #[default]'
 
 # On the right of status in colour228/pastel_yellow : print time 'H:M m.d.y'
 # set -g status-right '#[fg=colour228]Pane: #P | #[fg=colour228]%a %m/%d/%Y %I:%M:%S%P'
@@ -84,11 +74,12 @@ set -g status-left '#(#S) #(whoami)@#H #[default]'
 # Split panes using 'v' 'b', rather than " and % [Use prefix h]
 bind b split-window -h
 bind v split-window -v
+unbind 'r'
+bind r source-file ~/.config/tmux/tmux.conf
+
 unbind '"'
 unbind %
 
-# Easily reload configuration files
-bind r source-file ~/.tmux.conf
 
 # Switch panes using Alt-{h, j, k, l} without prefix
 bind -n M-h select-pane -L
@@ -96,5 +87,27 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-k select-pane -R
 
+set -g message-style "fg=#232831,bg=#abb1bb"
+set -g message-command-style "fg=#232831,bg=#abb1bb"
+set -g pane-border-style "fg=#abb1bb"
+set -g pane-active-border-style "fg=#81a1c1"
+set -g status-style "fg=#81a1c1,bg=#232831"
+
+setw -g window-status-style "NONE,fg=#7e8188,bg=#232831"
+setw -g window-status-activity-style "nounderscore,fg=#7e8188,bg=colour6"
+
+SLASH_DARK_BRIGHT=#[fg=#232831,bg=#abb1bb,nobold,nounderscore,noitalics]
+SLASH_MID_BRIGHT=#[fg=#4b5263,bg=#abb1bb,nobold,nounderscore,noitalics]
+SLASH_MID_DARK=#[fg=#4b5263,bg=#232831,nobold,nounderscore,noitalics]
+SLASH_DARK_DARK=#[fg=#232831,bg=#232831,nobold,nounderscore,noitalics]
+
+setw -g window-status-format "#{?#{==:#I,1},#{SLASH_MID_DARK},#{SLASH_DARK_DARK}}#[fg=#232831,bg=#232831,nobold,nounderscore,noitalics]#[default] #I #W #F#[fg=#232831,bg=#232831,nobold,nounderscore,noitalics]"
+
+setw -g window-status-current-format "#{?#{==:#I,1},#{SLASH_MID_BRIGHT},#{SLASH_DARK_BRIGHT}}#[fg=#232831,bg=#abb1bb,bold] #I #W #F#[fg=#abb1bb,bg=#232831,nobold,nounderscore,noitalics]"
+
+set -g status-left "#[fg=#232831,bg=#81a1c1,bold] #S #[fg=#81a1c1,bg=#4b5263,nobold,nounderscore,noitalics] "
+# set -g status-right ""
+set -g status-right "#[fg=#81a1c1,bg=#232831,nobold,nounderscore,noitalics]#[fg=#232831,bg=#81a1c1,bold] #(whoami)@#H "
+#5c6370
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
