--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -24,75 +24,19 @@ font:
     style: Italic
     # size: 12.0
 
-# colors:
-#   # Default colors
-#   primary:
-#     background: '0x1d1f21'
-#     foreground: '0xc5c8c6'
-
-#   # Normal colors
-#   normal:
-#     black:   '0x282a2e'
-#     red:     '0xa54242'
-#     green:   '0x8c9440'
-#     yellow:  '0xde935f'
-#     blue:    '0x5f819d'
-#     magenta: '0x85678f'
-#     cyan:    '0x5e8d87'
-#     white:   '0x707880'
-
-#   # Bright colors
-#   bright:
-#     black:   '0x373b41'
-#     red:     '0xcc6666'
-#     green:   '0xb5bd68'
-#     yellow:  '0xf0c674'
-#     blue:    '0x81a2be'
-#     magenta: '0xb294bb'
-#     cyan:    '0x8abeb7'
-#     white:   '0xc5c8c6'
-
-# Base16 Solarized Dark 256 - alacritty color config
-# Ethan Schoonover (modified by aramisgithub)
-colors:
-  # Default colors
-  primary:
-    # background: '0x002b36'
-    foreground: '0x93a1a1'
-    background: '0x1d1f21'
-#     foreground: '0xc5c8c6'
-
-  # Colors the cursor will use if `custom_cursor_colors` is true
-  cursor:
-    text: '0x002b36'
-    cursor: '0x93a1a1'
-
-  # Normal colors
-  normal:
-    black:   '0x002b36'
-    red:     '0xdc322f'
-    green:   '0x859900'
-    yellow:  '0xb58900'
-    blue:    '0x268bd2'
-    magenta: '0x6c71c4'
-    cyan:    '0x2aa198'
-    white:   '0x93a1a1'
-
-  # Bright colors
-  bright:
-    black:   '0x657b83'
-    red:     '0xdc322f'
-    green:   '0x859900'
-    yellow:  '0xb58900'
-    blue:    '0x268bd2'
-    magenta: '0x6c71c4'
-    cyan:    '0x2aa198'
-    white:   '0xfdf6e3'
-
-  indexed_colors:
-    - { index: 16, color: '0xcb4b16' }
-    - { index: 17, color: '0xd33682' }
-    - { index: 18, color: '0x073642' }
-    - { index: 19, color: '0x586e75' }
-    - { index: 20, color: '0x839496' }
-    - { index: 21, color: '0xeee8d5' }
+#
+  import:
+    - ~/.config/alacritty/terminal-sexy.yaml
+  # Indexed Colors
+  #
+  # The indexed colors include all colors from 16 to 256.
+  # When these are not set, they're filled with sensible defaults.
+  #indexed_colors:
+  #  - { index: 16, color: '0x000000' }
+  # indexed_colors:
+  #   - { index: 16, color: '0xcb4b16' }
+  #   - { index: 17, color: '0xd33682' }
+  #   - { index: 18, color: '0x073642' }
+  #   - { index: 19, color: '0x586e75' }
+  #   - { index: 20, color: '0x839496' }
+  #   - { index: 21, color: '0xeee8d5' }
