--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -100,12 +100,14 @@ SLASH_DARK_BRIGHT=#[fg=#232831,bg=#abb1bb,nobold,nounderscore,noitalics]
 SLASH_MID_BRIGHT=#[fg=#4b5263,bg=#abb1bb,nobold,nounderscore,noitalics]
 SLASH_MID_DARK=#[fg=#4b5263,bg=#232831,nobold,nounderscore,noitalics]
 SLASH_DARK_DARK=#[fg=#232831,bg=#232831,nobold,nounderscore,noitalics]
+SLASH_BLUE_MID=#[fg=#81a1c1,bg=#4b5263,nobold,nounderscore,noitalics]
+SLASH_BLUE_BRIGHT=#[fg=#81a1c1,bg=#abb1bb,nobold,nounderscore,noitalics]
+SLASH_BLUE_DARK=#[fg=#81a1c1,bg=#232831,nobold,nounderscore,noitalics]
 
+set -g status-left "#[fg=#232831,bg=#81a1c1,bold] #S #{SLASH_BLUE_MID} "
 setw -g window-status-format "#{?#{==:#I,1},#{SLASH_MID_DARK},#{SLASH_DARK_DARK}}#[fg=#232831,bg=#232831,nobold,nounderscore,noitalics]#[default] #I #W #F#[fg=#232831,bg=#232831,nobold,nounderscore,noitalics]"
-
 setw -g window-status-current-format "#{?#{==:#I,1},#{SLASH_MID_BRIGHT},#{SLASH_DARK_BRIGHT}}#[fg=#232831,bg=#abb1bb,bold] #I #W #F#[fg=#abb1bb,bg=#232831,nobold,nounderscore,noitalics]"
 
-set -g status-left "#[fg=#232831,bg=#81a1c1,bold] #S #[fg=#81a1c1,bg=#4b5263,nobold,nounderscore,noitalics] "
 # set -g status-right ""
 set -g status-right "#[fg=#81a1c1,bg=#232831,nobold,nounderscore,noitalics]#[fg=#232831,bg=#81a1c1,bold] #(whoami)@#H "
 #5c6370
