--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -37,6 +37,15 @@ font:
   #   - { index: 16, color: '0xcb4b16' }
   #   - { index: 17, color: '0xd33682' }
   #   - { index: 18, color: '0x073642' }
-  #   - { index: 19, color: '0x586e75' }
+  #   - { indejjx: 19, color: '0x586e75' }
   #   - { index: 20, color: '0x839496' }
   #   - { index: 21, color: '0xeee8d5' }
+
+
+# https://github.com/alacritty/alacritty/issues/93
+# seems to be needed on arch too...
+key_bindings:
+  - { key: J,        mods: Alt,     chars: "\x1bj"                       }
+  - { key: K,        mods: Alt,     chars: "\x1bk"                       }
+  - { key: H,        mods: Alt,     chars: "\x1bh"                       }
+  - { key: L,        mods: Alt,     chars: "\x1bl"                       }
