--- a/.config/sway/config
+++ b/.config/sway/config
@@ -40,17 +40,25 @@ output * bg /home/phil/.config/sway/mars-desert-satellite-8k-sj-3840x2160.jpg fi
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
 output eDP-1 scale 2
-output eDP-1 pos 1920 0 res 3840x2160
-output DP-1 pos 0 0 res 1920x1080
+# output eDP-1 pos 1920 0 res 3840x2160
+output eDP-1 pos 0 0 res 3840x2160
+output DP-1 pos 3840 0 res 1920x1080
 input type:tablet_tool map_to_output DP-1
 input type:touch map_to_output DP-1
 ### Idle configuration
 # Idle configuration
 exec swayidle \
          timeout 600 'exec $lock' \
-         timeout 1200 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
+         timeout 1200 'swaymsg "output * dpms off"' \
+         resume 'swaymsg "output * dpms on"' \
          timeout 1800 'systemctl suspend-then-hibernate' \
+         after-resume 'swaymsg "output * dpms on"' \
          before-sleep 'exec $lock'
+
+# exec swayidle -w \
+#            timeout 300 'swaylock -f -c 000000' \
+#            timeout 600 'swaymsg "output * dpms off"' \
+#            resume 'swaymsg "output * dpms on"' before-sleep 'swaylock -f -c 000000'
 
 # store clipboard to clipman
 exec wl-paste -t text --watch clipman store --no-persist
@@ -168,7 +176,10 @@ input type:touch map_to_output DP-1
     bindsym $mod+Shift+Down move down
     bindsym $mod+Shift+Up move up
     bindsym $mod+Shift+Right move right
-#
+
+bindgesture swipe:right workspace prev
+bindgesture swipe:left workspace next
+
 # Workspaces:
 #
 
@@ -353,12 +364,11 @@ bindsym $mod+r mode "resize"
 #
 # Colors
 #
-set $cl_high #009ddc
+set $cl_high #81a1c1
 set $cl_indi #d9d8d8
 set $cl_back #231f20
 set $cl_fore #d9d8d8
 set $cl_urge #ee2e24
-
 # Colors                border   bg       text     indi     childborder
 client.focused          $cl_high $cl_high $cl_fore $cl_indi $cl_high
 client.focused_inactive $cl_back $cl_back $cl_fore $cl_back $cl_back
@@ -394,7 +404,7 @@ exec --no-startup-id redshift -c ~/.config/redshift/config
 # workspace $wsF12
 # exec spotify
 workspace $wsF1
-exec signal-desktop --use-tray-icon --start-in-tray --enable-features=UseOzonePlatform --ozone-platform=wayland
+exec signal-desktop --use-tray-icon --enable-features=UseOzonePlatform --ozone-platform=wayland
 # exec gtk-launch signal-desktop
 workspace $ws2
 exec $term -e tmux
