--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -46,7 +46,6 @@ set -g status-interval 20
 set -g default-terminal "alacritty"
 set -g terminal-overrides ",alacritty:Tc"
 
-
 # emacs key bindings in tmux command prompt (prefix + :) are better than
 # vi keys, even for vim users
 set -g status-keys emacs
@@ -57,11 +56,6 @@ set -g focus-events on
 # super useful when using "grouped sessions" and multi-monitor setup
 setw -g aggressive-resize on
 
-
-# On the right of status in colour228/pastel_yellow : print time 'H:M m.d.y'
-# set -g status-right '#[fg=colour228]Pane: #P | #[fg=colour228]%a %m/%d/%Y %I:%M:%S%P'
-# set -g status-right '#H'
-
 # ---------------
 #	KEYBINDINGS
 # ---------------
@@ -71,8 +65,8 @@ setw -g aggressive-resize on
 # set-option -g prefix C-a
 # bind-key C-a send-prefix
 
-# Split panes using 'v' 'b', rather than " and % [Use prefix h]
-bind b split-window -h
+# Split panes using 'h' 'v', rather than " and % [Use prefix h]
+bind h split-window -h
 bind v split-window -v
 unbind 'r'
 bind r source-file ~/.config/tmux/tmux.conf
@@ -82,10 +76,10 @@ unbind %
 
 
 # Switch panes using Alt-{h, j, k, l} without prefix
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-k select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 set -g message-style "fg=#232831,bg=#abb1bb"
 set -g message-command-style "fg=#232831,bg=#abb1bb"
@@ -96,6 +90,7 @@ set -g status-style "fg=#81a1c1,bg=#232831"
 setw -g window-status-style "NONE,fg=#7e8188,bg=#232831"
 setw -g window-status-activity-style "nounderscore,fg=#7e8188,bg=colour6"
 
+# like nord colors
 SLASH_DARK_BRIGHT=#[fg=#232831,bg=#abb1bb,nobold,nounderscore,noitalics]
 SLASH_MID_BRIGHT=#[fg=#4b5263,bg=#abb1bb,nobold,nounderscore,noitalics]
 SLASH_MID_DARK=#[fg=#4b5263,bg=#232831,nobold,nounderscore,noitalics]
