--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,11 +5,10 @@ set -g mode-keys vi
 set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on
+set-option -g set-titles on
 
 # set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set -g mouse on
-# set wl-copy for wayland
-set -s copy-command 'wl-copy'
 
 # sane scrolling:
 # bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e; send-keys -M'"
@@ -46,6 +45,7 @@ set -g status-interval 20
 set -g default-terminal "alacritty"
 set -g terminal-overrides ",alacritty:Tc"
 
+
 # emacs key bindings in tmux command prompt (prefix + :) are better than
 # vi keys, even for vim users
 set -g status-keys emacs
@@ -76,6 +76,10 @@ unbind %
 
 
 # Switch panes using Alt-{h, j, k, l} without prefix
+# bind -n M-h select-pane -L
+# bind -n M-j select-pane -D
+# bind -n M-k select-pane -U
+# bind -n M-l select-pane -R
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -101,10 +105,21 @@ SLASH_BLUE_DARK=#[fg=#81a1c1,bg=#232831,nobold,nounderscore,noitalics]
 
 set -g status-left "#[fg=#232831,bg=#81a1c1,bold] #S #{SLASH_BLUE_MID} "
 setw -g window-status-format "#{?#{==:#I,1},#{SLASH_MID_DARK},#{SLASH_DARK_DARK}}#[fg=#232831,bg=#232831,nobold,nounderscore,noitalics]#[default] #I #W #F#[fg=#232831,bg=#232831,nobold,nounderscore,noitalics]"
+
 setw -g window-status-current-format "#{?#{==:#I,1},#{SLASH_MID_BRIGHT},#{SLASH_DARK_BRIGHT}}#[fg=#232831,bg=#abb1bb,bold] #I #W #F#[fg=#abb1bb,bg=#232831,nobold,nounderscore,noitalics]"
+
 
 # set -g status-right ""
 set -g status-right "#[fg=#81a1c1,bg=#232831,nobold,nounderscore,noitalics]#[fg=#232831,bg=#81a1c1,bold] #(whoami)@#H "
 #5c6370
+
+# set copy tools depending on display manager
+if-shell -b '[ $XDG_SESSION_TYPE = "x11" ]' {
+  set -s copy-command 'xsel -i'
+}
+if-shell -b '[ $XDG_SESSION_TYPE = "wayland" ]' {
+  set -s copy-command 'wl-copy'
+}
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # run '~/.tmux/plugins/tpm/tpm'
