--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -76,14 +76,10 @@ unbind %
 
 
 # Switch panes using Alt-{h, j, k, l} without prefix
-# bind -n M-h select-pane -L
-# bind -n M-j select-pane -D
-# bind -n M-k select-pane -U
-# bind -n M-l select-pane -R
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
 
 set -g message-style "fg=#232831,bg=#abb1bb"
 set -g message-command-style "fg=#232831,bg=#abb1bb"
