polybar multi monitor

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -47,13 +47,16 @@ margin-top = 0
 monitor = DP-2
 pin-workspaces = true
 inherit = bar/example
+modules-right = launcher spotify filesystem pulseaudio memory cpu wlan eth date tray powermenu 
 
 [bar/bar2]
 monitor = DP-4
 pin-workspaces = true
 inherit = bar/example
+modules-right = launcher spotify filesystem pulseaudio memory cpu wlan eth date powermenu 
 
 [bar/example]
+monitor = ${env:MONITOR:}
 width = 100%
 height = 24pt
 radius = 6
@@ -89,13 +92,13 @@ font-1 = "Symbols Nerd Font;2"
 font-2 = "Font Awesome 5 Free:size=9;2"
 
 modules-left = i3 xwindow
-modules-right = launcher spotify filesystem pulseaudio memory cpu wlan eth date powermenu 
+modules-right = launcher spotify filesystem pulseaudio memory cpu wlan eth date tray powermenu 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
 
-tray-position = right
+; tray-position = right
 
 ; wm-restack = generic
 ; wm-restack = bspwm
@@ -105,7 +108,7 @@ tray-position = right
 
 [module/i3]
 type = internal/i3
-format-font = 2
+format-font = 1
 
 ; Only show workspaces defined on the same output as the bar
 pin-workspaces = true
@@ -303,6 +306,12 @@ hook-0 = echo ""
 ; hook-1 = spotifyctl -q status --format ' %artist% - %title%'
 hook-1 = spotifyctl -q status --format '%artist% - %title%' --max-length 50 --max-title-length 20 --max-artist-length 20 --trunc '..'
 click-left = "spotifyctl -q playpause"
+
+[module/tray]
+type = internal/tray
+
+; format-margin = 8px
+; tray-spacing = 8px
 
 [settings]
 screenchange-reload = true
