--- a/.config/i3/config
+++ b/.config/i3/config
@@ -17,6 +17,30 @@ for_window [class="^.*"] border pixel 2
 gaps inner 10 
 # gaps outer 10
 
+
+# set $background = #2e3440
+# set $background-alt = #3b4252
+# set $foreground = #eceff4
+# set $primary = #ebcb8b
+# set $secondary = #81a1c1
+# set $alert = #bf616a
+# set $disabled = #4c566a
+# set $frost-color = #5E81AC
+
+# Window color assignments
+#                        border  bckground text    indicator
+ # client.focused          $secondary $secondary   $secondary $secondary
+ # client.focused_inactive $base02 $base02   $base03 $base0F
+ # client.unfocused        $base02 $base02   $base03 $base0F
+ # client.urgent           $base02 $base08   $base00 $base0F
+
+# class                 border  backgr. text    indicator child_border
+client.focused          #4c7899 #285577 #ffffff #2e9ef4   #5E81AC
+client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
+client.unfocused        #333333 #222222 #888888 #292d2e   #222222
+client.urgent           #2f343a #900000 #ffffff #900000   #900000
+client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+
 exec --no-startup-id "nitrogen --restore &"
 
 exec --no-startup-id picom -b
@@ -59,6 +83,9 @@ bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 
 bindsym Print exec --no-startup-id ksnip -f
 bindsym $mod+Print exec --no-startup-id ksnip -r
+
+bindsym $mod+Insert exec --no-startup-id rofi -modi "clipboard:greenclip print" -show clipboard
+bindsym $mod+i exec --no-startup-id ~/.config/rofi/applets/bin/emoji.sh
 
     # state 0x10, keycode 172 (keysym 0x1008ff14, XF86AudioPlay), same_screen YES,
     # state 0x10, keycode 173 (keysym 0x1008ff16, XF86AudioPrev), same_screen YES,
@@ -307,10 +334,12 @@ assign [class="acFirstTerm"] $ws2
 assign [class="Signal"] $wsF1
 assign [class="Spotify"] $wsF12
 
-exec --no-startup-id "gtk-launch google-chrome"
+exec --no-startup-id "greenclip daemon>/dev/null"
 exec --no-startup-id "alacritty --class=acFirstTerm -e tmux"
 exec --no-startup-id "gtk-launch signal-desktop"
 exec --no-startup-id "gtk-launch spotify"
+exec --no-startup-id "nextcloud"
+exec --no-startup-id "gtk-launch google-chrome"
 
 # exec --no-stkartup-id "sleep 4"
 # exec --no-startup-id "sleep2; i3-msg '[class=Alacritty] move window to workspace $ws2'"
