polybar config updates

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,20 +17,31 @@
 ;==========================================================
 
 [colors]
-; background = #282A2E
-; background-alt = #373B41
-; foreground = #C5C8C6
-; primary = #F0C674
-; secondary = #8ABEB7
-; alert = #A54242
-; disabled = #707880
-background = #2e3440
-background-alt = #3b4252
+background = #c02F343F
+background-alt = #d03b4252
 foreground = #eceff4
 primary = #ebcb8b
 secondary = #81a1c1
 alert = #bf616a
-disabled = #4c566a
+disabled = #616E88
+
+; let s:nord0_gui = "#2E3440"
+; let s:nord1_gui = "#3B4252"
+; let s:nord2_gui = "#434C5E"
+; let s:nord3_gui = "#4C566A"
+; let s:nord3_gui_bright = "#616E88"
+; let s:nord4_gui = "#D8DEE9"
+; let s:nord5_gui = "#E5E9F0"
+; let s:nord6_gui = "#ECEFF4"
+; let s:nord7_gui = "#8FBCBB"
+; let s:nord8_gui = "#88C0D0"
+; let s:nord9_gui = "#81A1C1"
+; let s:nord10_gui = "#5E81AC"
+; let s:nord11_gui = "#BF616A"
+; let s:nord12_gui = "#D08770"
+; let s:nord13_gui = "#EBCB8B"
+; let s:nord14_gui = "#A3BE8C"
+; let s:nord15_gui = "#B48EAD"
 
 [global/wm]
 ; Adjust the _NET_WM_STRUT_PARTIAL top value
@@ -59,7 +70,7 @@ modules-right = launcher spotify filesystem pulseaudio memory cpu wlan eth date 
 monitor = ${env:MONITOR:}
 width = 100%
 height = 24pt
-radius = 6
+radius = 0
 ; dpi = 96
 
 background = ${colors.background}
@@ -68,9 +79,9 @@ foreground = ${colors.foreground}
 line-size = 3pt
 
 border-size = 0pt
-border-left-size = 4pt
-border-right-size = 4pt
-border-top-size = 4pt
+border-left-size = 0px
+border-right-size = 0pt
+border-top-size = 0pt
 border-color = #00000000
 
 padding-left = 2
@@ -87,7 +98,8 @@ separator-foreground = ${colors.disabled}
 ; font-0 = "hack nerd font"
 ; font-0 = Font Awesome 5 Free:size=10
 ; font-0 = "Hack Nerd Font"
-font-0 = "NotoSans Nerd Font;2"
+; font-0 = "NotoSans Nerd Font;2"
+font-0 = "NotoSans NF;2"
 font-1 = "Symbols Nerd Font;2"
 font-2 = "Font Awesome 5 Free:size=9;2"
 
@@ -298,7 +310,7 @@ click-left = "spotifyctl -q playpause"
 
 [module/spotify]
 type = custom/ipc
-format-font = 1
+; format-font = 1
 ; Default
 format = <output>
 hook-0 = echo ""
