--- a/.config/i3/config
+++ b/.config/i3/config
@@ -119,10 +119,10 @@ bindsym $mod+d exec --no-startup-id ~/.config/rofi/launchers/type-1/launcher.sh
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -131,10 +131,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -143,7 +143,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+bindsym $mod+b split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -166,50 +166,32 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+# bindsym $mod+d focus child
 
-# Default workspaces for common programs
-# assign [app_id="^Signal$"] workspace $wsF1
-# assign [app_id="signal"] workspace $wsF1
-# # assign [class="Google-chrome"] workspace $ws1
-# assign [class="Spotify"] workspace $wsF12
-# assign [class="^Spotify$"] workspace $wsF12
-# assign [class="^Discord$"] workspace $wsF12
-#
-# for_window [title="nm_tui_win"] floating enable
-# for_window [title="263ebf09-23ec-411c-981e-9e7728edb35a"] floating enable
-#
-# for_window [title="Spotify"] move to workspace $wsF12
-# for_window [title="Signal"] move to workspace $wsF1
-# for_window [class="^discord$"] workspace $wsF2
-#
-# for_window [shell="^((?!xdg_shell).)*$"] title_format "%title :: %shell"
-# for_window [app_id="discord"] move to workspace $wsF2
-# for_window [class="Spotify"] move container to workspace $ws12
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 set $ws1   1:
 set $ws2   2:
-set $ws3   3:3
+set $ws3   3:
 set $ws4   4:4
 set $ws5   5:5
 set $ws6   6:6
 set $ws7   7:7
 set $ws8   8:8
 set $ws9   9:9
-set $ws0   10:10
-set $wsF1  11:
-set $wsF2  12:󰙯
+set $ws10  10:10
+set $wsF1  11:11
+set $wsF2  12:12
 set $wsF3  13:13
 set $wsF4  14:14
 set $wsF5  15:15
 set $wsF6  16:16
 set $wsF7  17:17
 set $wsF8  18:18
-set $wsF9  19:19
-set $wsF10 20:20
-set $wsF11 21:19
+set $wsF9  19:󰊻
+set $wsF10 20:
+set $wsF11 21:
 set $wsF12 22:
 
 # switch to workspace
@@ -222,7 +204,7 @@ bindsym $mod+6   workspace $ws6
 bindsym $mod+7   workspace $ws7
 bindsym $mod+8   workspace $ws8
 bindsym $mod+9   workspace $ws9
-bindsym $mod+0   workspace $ws0
+bindsym $mod+0   workspace $ws10
 bindsym $mod+F1  workspace $wsF1
 bindsym $mod+F2  workspace $wsF2
 bindsym $mod+F3  workspace $wsF3
@@ -246,7 +228,7 @@ bindsym $mod+Shift+6    move container to workspace $ws6
 bindsym $mod+Shift+7    move container to workspace $ws7
 bindsym $mod+Shift+8    move container to workspace $ws8
 bindsym $mod+Shift+9    move container to workspace $ws9
-bindsym $mod+Shift+0    move container to workspace $ws0
+bindsym $mod+Shift+0    move container to workspace $ws10
 bindsym $mod+Shift+F1   move container to workspace $wsF1
 bindsym $mod+Shift+F2   move container to workspace $wsF2
 bindsym $mod+Shift+F3   move container to workspace $wsF3
@@ -299,11 +281,15 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
+        bindsym plus resize grow width 10 px or 10 ppt
+        bindsym minus resize shrink width 10 px or 10 ppt
+        bindsym shift+plus resize grow height 10 px or 10 ppt
+        bindsym shift+minus resize shrink height 10 px or 10 ppt
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
         bindsym Down resize grow height 10 px or 10 ppt
@@ -329,17 +315,21 @@ bindsym $mod+r mode "resize"
 # move alacritty with special class to ws2
 # this way I can still open a terminal on every ws without it moving
 
+# xprop | grep -i class
 # assign [class="Google-Chrome"] $ws1
 assign [class="acFirstTerm"] $ws2
-assign [class="Signal"] $wsF1
+assign [class="Signal"] $wsF11
 assign [class="Spotify"] $wsF12
+assign [class="obsidian"] $wsF10
+assign [class="crx_cifhbcnohmdccbgoicgdjpfamggdegmo"] $wsF9
+assign [class="org.gnome.Nautilus"] $ws3
 
 exec --no-startup-id "greenclip daemon>/dev/null"
 exec --no-startup-id "alacritty --class=acFirstTerm -e tmux"
 exec --no-startup-id "gtk-launch signal-desktop"
 exec --no-startup-id "gtk-launch spotify"
 exec --no-startup-id "nextcloud"
-exec --no-startup-id "gtk-launch google-chrome"
+exec --no-startup-id "gtk-launch brave"
 
 # exec --no-stkartup-id "sleep 4"
 # exec --no-startup-id "sleep2; i3-msg '[class=Alacritty] move window to workspace $ws2'"
