--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -93,15 +93,11 @@ spacing = 0
 separator = |
 separator-foreground = ${colors.disabled}
 
-; font-0 = monospace;2
-; font-0 = "Noto Sans Symbols"
-; font-0 = "hack nerd font"
-; font-0 = Font Awesome 5 Free:size=10
-; font-0 = "Hack Nerd Font"
-; font-0 = "NotoSans Nerd Font;2"
-font-0 = "NotoSans NF;2"
+font-0 = "NotoSans Nerd Font;2"
+; Symbols are cut off in default nerd font, see https://github.com/polybar/polybar/issues/991
 font-1 = "Symbols Nerd Font;2"
-font-2 = "Font Awesome 5 Free:size=9;2"
+; search glyphs here: https://www.nerdfonts.com/cheat-sheet
+font-2 = "Font Awesome 5 Free;2"
 
 modules-left = i3 xwindow
 modules-right = launcher spotify filesystem pulseaudio memory cpu wlan eth date tray powermenu 
