--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,141 +1,145 @@
 {
   "layer": "bottom",
-  "position": "top",
-  "height": 30,
-  "modules-left": ["sway/workspaces", "sway/mode", "sway/window"],
-  "modules-right": ["custom/spotify", "custom/storage", "backlight", "pulseaudio", "cpu", "battery", "network", "bluetooth", "idle_inhibitor", "tray", "clock"],
-  "sway/mode": {
-    "format": " {}"
-  },
-  "sway/workspaces": {
-    "format": "{name}",
-    "disable-scroll": true
-  },
-  "sway/window": {
-    "max-length": 80,
-    "tooltip": false
-  },
-  "clock": {
-    "format": "{:%a %d %b %H:%M}",
-    "tooltip": false
-  },
-  "battery": {
-    "format": "{capacity} {icon}",
-    "format-alt": "{time} {icon}",
-    "format-alt-click": "click-right",
-    "format-icons": ["", "", "", "", ""],
-    "format-charging": "{capacity}  ",
-    "interval": 30,
-    "states": {
-      "warning": 25,
-      "critical": 10
+    "position": "top",
+    "modules-left": ["hyprland/workspaces", "hyprland/window"],
+    "modules-right": ["custom/spotify", "custom/storage", "backlight", "pulseaudio", "cpu", "battery", "network", "bluetooth", "idle_inhibitor", "tray", "clock"],
+    "hyprland/workspaces": {
+      "format": "{icon}",
+      "disable-scroll": true,
+      "format-icons": {
+        "1": "",
+        "2": "",
+        "3": "3",
+        "4": "4",
+        "5": "5",
+        "6": "6",
+        "7": "7",
+        "8": "8",
+        "9": "󰎛",
+        "10": "",
+        "11": ""
+      },
     },
-    "tooltip": false
-  },
-  "network": {
-    "format-alt": "{ipaddr}/{cidr} {icon}",
-    "format": "{ipaddr}/{cidr} {icon}",
-    "format-wifi": "{essid} {signalStrength} {icon}",
-    "format-ethernet": "{ifname} {icon}",
-    "format-disconnected": "Disconnected {icon}",
-    "format-alt-click": "click-right",
-    "format-icons": {
-      "_wifi": ["󰤟", "󰤢" ,"󰤥","󰤨"],
-      "wifi": ["󰢿","󰢼", "󰢽", "󰢾"],
-      "ethernet": ["󰈀"],
-      "wwan": ["m"],
-      "disconnected": [""]
+    "hyprland/window": {
+      "max-length": 80,
+      "tooltip": false
     },
-    "on-click": "alacritty --config-file=/dev/null -t nm_tui_win -e nmtui",
-    "tooltip": false
-  },
-  "pulseaudio": {
-    "format-alt": "{icon}",
-    "format": "{volume} {icon}",
-    "format-alt-click": "click-right",
-    "format-muted": "󰝟",
-    "format-icons": {
-      "phone": [" ", " ", " "],
-      "headphone": [" ", " ", " "],
-      "hands-free": [" ", " ", " "],
-      "headset": [" ", " ", " "],
-      "phone": "",
-      "portable": "",
-      "car": "",
-      "_default": ["", "", "", ""],
-      "default": ["", "", ""]
+    "clock": {
+      "format": "{:%a %d %b %H:%M}",
+      "tooltip": false
     },
-    "scroll-step": 10,
-    "on-click": "pavucontrol",
-    "tooltip": false
-  },
-  "bluetooth": {
-    "format": "{icon}",
-    "format-disabled": "{icon}",
-    "_format-alt": "bluetooth: {status}",
-    "interval": 30,
-    "format-icons": {
-      "enabled": "",
-      "disabled": "󰂲"
+    "battery": {
+      "format": "{capacity} {icon}",
+      "format-alt": "{time} {icon}",
+      "format-alt-click": "click-right",
+      "format-icons-charging": ["", "", "", "", ""],
+      "format-icons": {
+        "default": ["󰂎", "󰁻", "󰁽", "󰁿", "󰁹"],
+        "charging": ["󰢟", "󰂆", "󰂈", "󰂉", "󰂅"]
+      },
+      "interval": 30,
+      "states": {
+        "warning": 25,
+        "critical": 10
+      },
+      "tooltip": false
     },
-    "_tooltip-format": "{status}",
-    "tooltip": false
-  },
-  "custom/spotify": {
-    "interval": 20,
-    "return-type": "json",
-    "exec": "~/.config/waybar/modules/spotify.sh",
-    "exec-if": "pgrep spotify",
-    "escape": true
-  },
-  "custom/storage": {
-    "format": "{} ",
-    "format-alt": "{percentage}% ",
-    "format-alt-click": "click-right",
-    "return-type": "json",
-    "interval": 180,
-    "exec": "~/.config/waybar/modules/storage.sh"
-  },
-  "backlight": {
-    "format-alt": "{icon}",
-    "format": "{percent} {icon}",
-    "format-alt-click": "click-right",
-    "format-icons": ["", "", "", "", "", "", "", "", ""],
-    "on-scroll-down": "brightnessctl set 1%-",
-    "on-scroll-up": "brightnessctl set 1%+"
-  },
-  "custom/weather": {
-    "format": "{}",
-    "format-alt": "{alt}: {}",
-    "format-alt-click": "click-right",
-    "interval": 1800,
-    "return-type": "json",
-    "exec": "~/.config/waybar/modules/weather.sh",
-    "exec-if": "ping wttr.in -c1"
-  },
-  "cpu": {
-    "interval": 15,
-    "format": "{} ",
-    "max-length": 10
-  },
-  "idle_inhibitor": {
-    "format": "{icon}",
-    "format-icons": {
-      "activated": "󱫧",
-      "deactivated": "󱫑"
+    "network": {
+      "format-alt": "{ipaddr}/{cidr} {icon}",
+      "format": "{ipaddr}/{cidr} {icon}",
+      "format-wifi": "{essid} {signalStrength} {icon}",
+      "format-ethernet": "{ifname} {icon}",
+      "format-disconnected": "Disconnected {icon}",
+      "format-alt-click": "click-right",
+      "format-icons": {
+        "_wifi": ["󰤟", "󰤢" ,"󰤥","󰤨"],
+        "wifi": ["󰢿","󰢼", "󰢽", "󰢾"],
+        "ethernet": ["󰈀"],
+        "wwan": ["m"],
+        "disconnected": [""]
+      },
+      "on-click": "alacritty --config-file=/dev/null -t nm_tui_win -e nmtui",
+      "tooltip": false
     },
-    "_tooltip": false
-  },
-  "tray": {
-    "spacing": 5,
-    "icon-size": 15
-  },
-  "wlr/taskbar": {
-    "format": "{icon}",
-    "icon-size": 14,
-    "icon-theme": "Numix-Circle",
-    "tooltip-format": "{title}",
-    "on-click": "activate",
-    "on-click-middle": "close"
-  }
+    "pulseaudio": {
+      "format-alt": "{icon}",
+      "format": "{volume} {icon}",
+      "format-alt-click": "click-right",
+      "format-muted": "󰝟",
+      "format-icons": {
+        "phone": [" ", " ", " "],
+        "headphone": [" ", " ", " "],
+        "hands-free": [" ", " ", " "],
+        "headset": [" ", " ", " "],
+        "phone": "",
+        "portable": "",
+        "car": "",
+        "_default": ["", "", "", ""],
+        "default": ["", "", ""]
+      },
+      "scroll-step": 10,
+      "on-click": "pavucontrol",
+      "tooltip": false
+    },
+    "bluetooth": {
+      "format": "{icon}",
+      "format-disabled": "{icon}",
+      "_format-alt": "bluetooth: {status}",
+      "interval": 30,
+      "format-icons": {
+        "enabled": "",
+        "disabled": "󰂲"
+      },
+      "_tooltip-format": "{status}",
+      "tooltip": false
+    },
+    "custom/spotify": {
+      "interval": 20,
+      "return-type": "json",
+      "exec": "~/.config/waybar/modules/spotify.sh",
+      "exec-if": "pgrep spotify",
+      "escape": true,
+      "on-click": "playerctl play-pause"
+    },
+    "custom/storage": {
+      "format": "{} 󰋊",
+      "format-alt": "{percentage}% ",
+      "format-alt-click": "click-right",
+      "return-type": "json",
+      "interval": 180,
+      "exec": "~/.config/waybar/modules/storage.sh"
+    },
+    "backlight": {
+      "format-alt": "{icon}",
+      "format": "{percent} {icon}",
+      "format-alt-click": "click-right",
+      "format-icons": ["", "", "", "", "", "", "", "", ""],
+      "on-scroll-down": "brightnessctl set 1%-",
+      "on-scroll-up": "brightnessctl set 1%+",
+      "tooltip": false
+    },
+    "cpu": {
+      "interval": 15,
+      "format": "{} ",
+    },
+    "idle_inhibitor": {
+      "format": "{icon}",
+      "format-icons": {
+        "activated": "󱫧",
+        "deactivated": "󱫑"
+      },
+      "_tooltip": false
+    },
+    "tray": {
+      "spacing": 5,
+      "icon-size": 15
+    },
+    "wlr/taskbar": {
+      "format": "{icon}",
+      "icon-size": 14,
+      "icon-theme": "Numix-Circle",
+      "tooltip-format": "{title}",
+      "on-click": "activate",
+      "on-click-middle": "close"
+    }
 }
