--- a/.config/hypr/hyprland_shared.conf
+++ b/.config/hypr/hyprland_shared.conf
@@ -353,12 +353,15 @@ exec-once = [workspace 1 silent] brave --ozone-platform=wayland --use-gl=egl
 
 exec-once = [workspace 2 silent] alacritty -e tmux new-session -A -s main
 
+exec-once = [workspace 20 silent] signal-desktop --use-tray-icon --ozone-platform=wayland --use-gl=egl
+# windowrulev2 = workspace 22 silent, title:^(Spotify Premium)$
+#
 exec-once = [workspace 21 silent] gtk-launch obsidian
 windowrulev2 = workspace 21 silent, class:^(obsidian)$
 
 exec-once = [workspace 22 silent] spotify --ozone-platform=wayland --use-gl=egl
-
 windowrulev2 = workspace 22 silent, title:^(Spotify Premium)$
+
 
 exec-once = hyprctl dispatch workspace 22
 exec-once = hyprctl dispatch workspace 1
