--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,10 +1,11 @@
-preload = ~/Images/mars-desert-satellite-8k-sj-3840x2160.jpg
+# preload = ~/Images/Wallpaper/mars-desert-satellite-8k-sj-3840x2160.jpg
+# preload = ~/Images/Wallpaper/yosemite.jpg
+preload = ~/Images/Wallpaper/sierra.jpg
 #if more than one preload is desired then continue to preload other backgrounds
 # .. more preloads
 
 #set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
-wallpaper = ,~/Images/mars-desert-satellite-8k-sj-3840x2160.jpg
-
+wallpaper = ,~/Images/Wallpaper/sierra.jpg
 #if more than one monitor in use, can load a 2nd image
 # wallpaper = monitor2,/path/to/next_image.png
 # .. more monitors
