--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,21 +1,20 @@
 # BACKGROUND
 background {
     monitor =
-    path = screenshot
-    blur_passes = 3
-    contrast = 0.8916
-    brightness = 0.8172
-    vibrancy = 0.1696
-    vibrancy_darkness = 0.0
+    path = ~/Images/Wallpaper/sierra-corr.png
+    # blur_passes = 3
+    # contrast = 0.8916
+    # brightness = 0.8172
+    # vibrancy = 0.1696
+    # vibrancy_darkness = 0.0
 }
 
 # GENERAL
 general {
     no_fade_in = false
-    grace = 0
+    grace = 1
     disable_loading_bar = true
 }
-
 # INPUT FIELD
 input-field {
     monitor =
@@ -29,48 +28,36 @@ input-field {
     font_color = rgb(200, 200, 200)
     fade_on_empty = false
     font_family = JetBrains Mono Nerd Font Mono
-    placeholder_text = <i><span foreground="##cdd6f4">Input Password...</span></i>
+    placeholder_text = <i><span foreground="##cdd6f4aa">Password</span></i>
     hide_input = false
-    position = 0, -120
+    position = 0, 120
     halign = center
-    valign = center
+    valign = bottom
 }
 
 # TIME
 label {
     monitor =
     text = cmd[update:1000] echo "$(date +"%-I:%M%p")"
-    color = $foreground
-    #color = rgba(255, 255, 255, 0.6)
-    font_size = 120
+    # color = $foreground
+    color = rgba(255, 255, 255, 0.1)
+    font_size = 100
     font_family = JetBrains Mono Nerd Font Mono ExtraBold
-    position = 0, -300
-    halign = center
+    position = -100, -100
+    halign = right
     valign = top
 }
 
 # USER
-label {
-    monitor =
-    text = Hi there, $USER
-    color = $foreground
-    #color = rgba(255, 255, 255, 0.6)
-    font_size = 25
-    font_family = JetBrains Mono Nerd Font Mono
-    position = 0, -40
-    halign = center
-    valign = center
-}
+# label {
+#     monitor =
+#     text = Hi there, $USER
+#     color = $foreground
+#     #color = rgba(255, 255, 255, 0.6)
+#     font_size = 25
+#     font_family = JetBrains Mono Nerd Font Mono
+#     position = 0, -40
+#     halign = center
+#     valign = center
+# }
 
-# CURRENT SONG
-label {
-    monitor =
-    text = cmd[update:1000] echo "$(~/Documents/Scripts/whatsong.sh)" 
-    color = $foreground
-    #color = rgba(255, 255, 255, 0.6)
-    font_size = 18
-    font_family = JetBrainsMono, Font Awesome 6 Free Solid
-    position = 0, -50
-    halign = center
-    valign = bottom
-}
