tmux resize h-split

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -64,8 +64,10 @@ setw -g aggressive-resize on
 # bind-key C-a send-prefix
 
 # Split panes using 'h' 'v', rather than " and % [Use prefix h]
-bind h split-window -h
-bind v split-window -v
+bind h split-window -h -c '#{pane_current_path}'
+# I usually want a terminal in the same path that uses 20% of the space
+bind v split-window -v -c '#{pane_current_path}' \;  resize-pane -y '20%'
+
 unbind 'r'
 bind r source-file ~/.config/tmux/tmux.conf
 
