i3 updates, not used

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -57,7 +57,7 @@ font pango:monospace 8
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
-exec --no-startup-id dex --autostart --environment i3
+# exec --no-startup-id dex --autostart --environment i3
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -337,3 +337,4 @@ exec --no-startup-id "gtk-launch brave"
 # exec --no-startup-id "i3-msg '[class=Spotify] move window to workspace number 11'"
 
 exec_always --no-startup-id ~/.config/polybar/launch.sh
+exec_always --no-startup-id dunst -config ~/.config/dunst/dunstrc
