hyprland depreciated decoration shadows

--- a/.config/hypr/hyprland_shared.conf
+++ b/.config/hypr/hyprland_shared.conf
@@ -2,8 +2,12 @@
 debug:disable_logs = true
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
-env = GTK_THEME,Adwaita:dark 
-
+# env = GTK_THEME,Adwaita:dark 
+# GTK_THEME=Adwaita:dark
+# GTK2_RC_FILES=/usr/share/themes/Adwaita-dark/gtk-2.0/gtkrc
+# QT_STYLE_OVERRIDE=Adwaita-Dark
+env = GTK_THEME,Orchis-Dark-Compact
+exec-once = systemctl --user import-environment GTK_THEME
 ################
 ### MONITORS ###
 ################
@@ -40,7 +44,7 @@ $clipboardmanager = clipman pick -t wofi
 # exec-once = $terminal
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = wl-paste -t text --watch clipman store --no-persist
-exec-once = waybar
+exec-once = waybar 2>&1 > ~/waybar.log
 exec-once = hyprpaper
 exec-once = hypridle
 
@@ -91,11 +95,6 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
-
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
@@ -132,7 +131,7 @@ dwindle {
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_is_master = true
+    new_status = master
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
