kb layout, signal fix

--- a/.config/hypr/hyprland_shared.conf
+++ b/.config/hypr/hyprland_shared.conf
@@ -147,7 +147,7 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = eu
+    kb_layout = de
     kb_variant =
     kb_model =
     kb_options =
@@ -352,7 +352,8 @@ exec-once = [workspace 1 silent] brave --ozone-platform=wayland --use-gl=egl
 
 exec-once = [workspace 2 silent] alacritty -e tmux new-session -A -s main
 
-exec-once = [workspace 20 silent] signal-desktop --use-tray-icon --ozone-platform=wayland --use-gl=egl
+exec-once = [workspace 20 silent] signal-desktop --password-store="gnome-libsecret" --use-tray-icon --ozone-platform=wayland --use-gl=egl
+
 # windowrulev2 = workspace 22 silent, title:^(Spotify Premium)$
 #
 exec-once = [workspace 21 silent] gtk-launch obsidian
