--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,6 +1,6 @@
-live_config_reload = true
+general.live_config_reload = true
 
-import = ["~/.config/alacritty/theme.toml"]
+general.import = ["~/.config/alacritty/theme.toml"]
 
 # [selection]
 # save_to_clipboard = true
