--- a/.config/hypr/hyprland_desktop.conf
+++ b/.config/hypr/hyprland_desktop.conf
@@ -2,7 +2,7 @@
 # Environment Variables NVIDIA Specific
 # See the wiki for more info as some work is required
 # https://wiki.hyprland.org/hyprland-wiki/pages/Nvidia/
-env = WLR_NO_HARDWARE_CURSORS,1
+# env = WLR_NO_HARDWARE_CURSORS,1 
 
 # Hardware acceleration on NVIDIA GPUs
 # See Archwiki Hardware Acecleration Page for details and necessary values before setting this variable.
@@ -14,8 +14,8 @@ env = LIBVA_DRIVER_NAME,nvidia
 # To force GBM as a backend, set the following environment variables:
 # See Archwiki Wayland Page for more details on those variables.
 # https://wiki.archlinux.org/title/Wayland#Requirements
-env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+# env = GBM_BACKEND,nvidia-drm
+# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 
 # Controls if G-Sync capable monitors should use Variable Refresh Rate (VRR)
@@ -33,8 +33,11 @@ env = WLR_DRM_NO_ATOMIC,1
 $second_monitor = desc:Dell Inc. DELL P2214H 29C295613GRL
 $first_monitor = desc:LG Electronics LG ULTRAGEAR 301MAWLKVJ89
 
+
 source = ~/.config/hypr/hyprland_shared.conf
 
-monitor=$first_monitor, 2560x1440, 0x0, 1
+monitor=$first_monitor, 2560x1440@120, 0x0, 1
 monitor=$second_monitor, 1920x1080, 2560x0, 1
 
+exec-once = killall hypridle
+exec-once = pkill -SIGRTMIN+8 waybar
