hypr config update

--- a/.config/hypr/hyprland_shared.conf
+++ b/.config/hypr/hyprland_shared.conf
@@ -163,15 +163,8 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = true
-    workspace_swipe_invert = true
-    workspace_swipe_fingers = 3
-    workspace_swipe_distance = 1000
-    workspace_swipe_cancel_ratio = 0.5
-    workspace_swipe_min_speed_to_force = 20
-    workspace_swipe_create_new = false
-}
+gesture = 3, horizontal, workspace
+
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
